--- a/3a/digicafe.html
+++ b/3a/digicafe.html
@@ -15,7 +15,7 @@
       <a href="index.html">Etusivu</a>
       <a href="digicafe.html" class="active">Digi cafe</a>
       <a href="palaveri.html">Palaveri</a>
-      <a href="tyopaikat.html">Työpaikat</a>
+      <a href="tyot.html">Työpaikat</a>
       <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
         <i class="fa fa-bars"></i>
       </a>
