--- a/3a/tyot.html
+++ b/3a/tyot.html
@@ -8,13 +8,14 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
+    <script src="tyot.js"></script>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
       <a href="index.html">Etusivu</a>
       <a href="digicafe.html">Digi cafe</a>
       <a href="palaveri.html">Palaveri</a>
-      <a href="tyopaikat.html" class="active">Työpaikat</a>
+      <a href="tyot.html" class="active">Työpaikat</a>
       <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
         <i class="fa fa-bars"></i>
       </a>
