--- a/3a/digicafe.html
+++ b/3a/digicafe.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
     <script src="digicafe.js"></script>
+    <title>Digi cafe</title>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
