--- a/3a/index.html
+++ b/3a/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
     <script src="etusivu.js"></script>
+    <title>Etusivu</title>
   </head>
   <body>
     <div class="topnav" id="myTopnav">
