--- a/3b/tapahtumat.html
+++ b/3b/tapahtumat.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
+<script src="tapahtumat.js"></script>
 <title>Tapahtumat</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
   </a>
 </div>
 
-<div id="sisalto"></div>
+<div id="vastaus"></div>
 
 <script>
 function myFunction() {
