--- a/3b/saa.html
+++ b/3b/saa.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
+<script src="saa.js"></script>
 <title>Säätiedot</title>
 </head>
 <body>
@@ -18,7 +19,11 @@
   </a>
 </div>
 
-<div id="vastaus"></div>
+<div id="vastaus">
+    <h1>Säätiedot</h1>
+    <div id="helsinki"></div>
+    <div id="tampere"></div>
+</div>
 
 <script>
 function myFunction() {
